[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cubed"
version = "0.25.0"
authors = [
    {name = "Tom White", email = "tom.e.white@gmail.com"},
]
license = {text = "Apache License 2.0"}
description = "Scalable array processing with bounded memory"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "aiostream",
    "array-api-compat",
    "cloudpickle",
    "donfig",
    "mypy_extensions", # for rechunker
    "ndindex",
    "networkx != 2.8.3, != 2.8.4, != 2.8.5, != 2.8.6, != 2.8.7, != 2.8.8, != 3.0.*, != 3.1.*, != 3.2.*",
    "numpy >= 1.22",
    "psutil",
    "tenacity",
    "toolz",
    "zarr != 3.1.2",
]

[project.optional-dependencies]
diagnostics = [
    "tqdm",
    "graphviz",
    "jinja2",
    "pydot",
    "pandas",
    "matplotlib",
    "rich",
    "seaborn",
    "anywidget",
]
beam = ["apache-beam", "gcsfs"]
dask = ["dask < 2024.12.0"]
dask-distributed = ["distributed < 2024.12.0"]
icechunk = ["icechunk"]
lithops = ["lithops[aws] >= 3.3.0"]
lithops-aws = [
    "cubed[diagnostics]",
    "lithops[aws] >= 3.3.0",
    "s3fs",
]
lithops-gcp = [
    "cubed[diagnostics]",
    "lithops[gcp] >= 3.3.0",
    "gcsfs",
]
modal = [
    "cubed[diagnostics]",
    "modal",
    "s3fs",
]
modal-gcp = [
    "cubed[diagnostics]",
    "modal",
    "gcsfs",
]
coiled = [
    "cubed[diagnostics]",
    "coiled",
    "dask[complete]",
    "s3fs",
]
test = [
    "cubed[diagnostics]",
    "dill",
    "numpy_groupies",
    "obstore",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
homepage = "https://github.com/cubed-dev/cubed"
documentation = "https://tomwhite.github.io/cubed"
repository = "https://github.com/cubed-dev/cubed"

[tool.pytest.ini_options]
filterwarnings = [
    "error::UserWarning",
]
testpaths = "cubed/tests"

[tool.ruff]
target-version = "py311"

exclude = [
    "cubed/vendor",
    "docs",
    "examples",
    ".eggs"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "PT",  # flake8-pytest-style
]
ignore = [
    "E402",  # Module level import not at top of file
    "E501",  # Line too long
    "E731",  # Do not assign a lambda expression, use a def
    "B905",  # zip() without an explicit strict= parameter
 ]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["cubed"]
known-third-party = [
    "aiostream",
    "array-api-compat",
    "cloudpickle",
    "donfig",
    "fsspec",
    "mypy_extensions",
    "ndindex",
    "networkx",
    "numpy",
    "psutil",
    "tenacity",
    "toolz",
    "zarr",
]

[tool.mypy]
files = "cubed"
python_version = "3.11"
strict = false
enable_error_code = ["truthy-bool"]
ignore_missing_imports = true
allow_redefinition= true
exclude = [
  "cubed/array_api",
  "cubed/tests",
  "cubed/vendor",
  "docs"
]

[[tool.mypy.overrides]]
# Ignore vendored libraries
module = [ "cubed.array_api.*", "cubed.vendor.*", ]
ignore_errors = true
