[metadata]
name = cubed
version = 0.0.1
author = Tom White
author_email = tom.e.white@gmail.com
license = Apache License 2.0
description = Fixed-memory serverless distributed N-dimensional array processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomwhite/cubed
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
install_requires =
    dask[array]
    fsspec
    networkx
    numpy >= 1.22
    pygraphviz
    rechunker
    zarr

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
