[metadata]
name = cubed
version = 0.3.0
author = Tom White
author_email = tom.e.white@gmail.com
license = Apache License 2.0
description = Bounded-memory serverless distributed N-dimensional array processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomwhite/cubed
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiostream
    dask[array]
    fsspec
    gcsfs  # needed for Apache Beam --setup_file
    networkx < 2.8.3
    numpy >= 1.22
    pydot
    rechunker
    tenacity
    xarray-beam
    zarr

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
