[metadata]
name = cubed
version = 0.5.0
author = Tom White
author_email = tom.e.white@gmail.com
license = Apache License 2.0
description = Bounded-memory serverless distributed N-dimensional array processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomwhite/cubed
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiostream
    dask[array]
    fsspec
    # gcsfs  # needed for Apache Beam --setup_file
    mypy_extensions # for rechunker
    networkx < 2.8.3
    numpy >= 1.22
    pydot
    tenacity
    zarr

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503


[mypy]
exclude = tests|doc
files = .
show_error_codes = True

# Most of the numerical computing stack doesn't have type annotations yet.
[mypy-apache_beam.*]
ignore_missing_imports = True
[mypy-aiostream.*]
ignore_missing_imports = True
[mypy-dask.*]
ignore_missing_imports = True
[mypy-distributed.*]
ignore_missing_imports = True
[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-lithops.*]
ignore_missing_imports = True
[mypy-IPython.*]
ignore_missing_imports = True
[mypy-modal.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-networkx.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pylab.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-rechunker.*]
ignore_missing_imports = True
[mypy-seaborn.*]
ignore_missing_imports = True
[mypy-six.*]
ignore_missing_imports = True
[mypy-tenacity.*]
ignore_missing_imports = True
[mypy-tlz.*]
ignore_missing_imports = True
[mypy-toolz.*]
ignore_missing_imports = True
[mypy-tqdm.*]
ignore_missing_imports = True
[mypy-zarr.*]
ignore_missing_imports = True
